fixed icons not showing

--- a/webui/private/css/custom-webui.css
+++ b/webui/private/css/custom-webui.css
@@ -625,7 +625,6 @@ img[src="icons/inode-directory.svg"] {
     background-size: contain;
     background-repeat: no-repeat;
     background-origin: content-box;
-    object-position: -999999px 999999px;
 }
 
 img[src="icons/inode-tag.svg"] {
@@ -633,7 +632,6 @@ img[src="icons/inode-tag.svg"] {
     background-size: contain;
     background-repeat: no-repeat;
     background-origin: content-box;
-    object-position: -999999px 999999px;
 }
 
 img[src="icons/network-server.svg"] {
@@ -641,7 +639,6 @@ img[src="icons/network-server.svg"] {
     background-size: contain;
     background-repeat: no-repeat;
     background-origin: content-box;
-    object-position: -999999px 999999px;
 }
 
 img[src="icons/paused.svg"] {
@@ -649,7 +646,6 @@ img[src="icons/paused.svg"] {
     background-size: contain;
     background-repeat: no-repeat;
     background-origin: content-box;
-    object-position: -999999px 999999px;
     filter: grayscale(100%);
     -webkit-filter: grayscale(100%);
 }
@@ -659,7 +655,6 @@ img[src="icons/stalledDL.svg"] {
     background-size: contain;
     background-repeat: no-repeat;
     background-origin: content-box;
-    object-position: -999999px 999999px;
 }
 
 img[src="icons/stalledUP.svg"] {
@@ -667,7 +662,6 @@ img[src="icons/stalledUP.svg"] {
     background-size: contain;
     background-repeat: no-repeat;
     background-origin: content-box;
-    object-position: -999999px 999999px;
 }
 
 img[src="icons/seeding.svg"],
@@ -676,7 +670,6 @@ img[src="icons/uploading.svg"] {
     background-size: contain;
     background-repeat: no-repeat;
     background-origin: content-box;
-    object-position: -999999px 999999px;
 }
 
 img[src="icons/downloading_small.svg"],
@@ -685,7 +678,6 @@ img[src="icons/downloading.svg"] {
     background-size: contain;
     background-repeat: no-repeat;
     background-origin: content-box;
-    object-position: -999999px 999999px;
 }
 
 img[src="icons/connected.svg"] {
@@ -693,7 +685,6 @@ img[src="icons/connected.svg"] {
     background-size: contain;
     background-repeat: no-repeat;
     background-origin: content-box;
-    object-position: -999999px 999999px;
 }
 
 img[src="icons/disconnected.svg"] {
@@ -701,7 +692,6 @@ img[src="icons/disconnected.svg"] {
     background-size: contain;
     background-repeat: no-repeat;
     background-origin: content-box;
-    object-position: -999999px 999999px;
 }
 
 img[src="icons/slow.svg"] {
@@ -709,7 +699,6 @@ img[src="icons/slow.svg"] {
     background-size: contain;
     background-repeat: no-repeat;
     background-origin: content-box;
-    object-position: -999999px 999999px;
 }
 
 img[src="icons/slow_off.svg"] {
@@ -717,7 +706,6 @@ img[src="icons/slow_off.svg"] {
     background-size: contain;
     background-repeat: no-repeat;
     background-origin: content-box;
-    object-position: -999999px 999999px;
 }
 
 img[src="icons/completed.svg"] {
@@ -725,7 +713,6 @@ img[src="icons/completed.svg"] {
     background-size: contain;
     background-repeat: no-repeat;
     background-origin: content-box;
-    object-position: -999999px 999999px;
 }
 
 img[src="icons/mail-folder-inbox.svg"] {
@@ -733,7 +720,6 @@ img[src="icons/mail-folder-inbox.svg"] {
     background-size: contain;
     background-repeat: no-repeat;
     background-origin: content-box;
-    object-position: -999999px 999999px;
 }
 
 
